# Django_contacts_assistant_project

./: .env_example  .gitignore  Dockerfile  Pipfile  Procfile  README.md  instruction.txt  presentation-p-web.docx  pyproject.toml  requirements.txt  run.sh
contacts_assistant/: manage.py  requirements.txt
contacts_assistant/contacts/: forms.py  models.py  urls.py  views.py
contacts_assistant/contacts/management/commands/: faker_contacts.py  faker_notes.py
contacts_assistant/contacts/migrations/: 0001_initial.py  0002_rename_fullname_contact_full_name_contact_user.py  0003_alter_contact_birthday.py
contacts_assistant/contacts/templates/contacts/: base.html  contact_confirm_delete.html  contact_form.html  contact_list.html  (+2 more)
contacts_assistant/contacts_assistant/: asgi.py  faker_contacts.py  settings.py  urls.py  wsgi.py
contacts_assistant/files/: forms.py  models.py  urls.py  views.py
contacts_assistant/my_files/: forms.py  models.py  tasks.txt  urls.py  views.py
contacts_assistant/my_files/migrations/: 0001_initial.py
contacts_assistant/news/: main_news.py  models.py  pravda_com_ua.json  urls.py  valute.json  valute_news.py  views.py
contacts_assistant/news/migrations/: 0001_initial.py
contacts_assistant/notes/: forms.py  models.py  urls.py  views.py
contacts_assistant/notes/migrations/: 0001_initial.py  0002_note_user.py  0002_remove_note_done_note_user.py  0003_remove_note_done.py  0004_tag_user.py  0005_alter_tag_name.py  0006_tag_tag_of_username.py
contacts_assistant/notes/templatetags/: extract.py
contacts_assistant/users/: views.py
(+34 files in other folders)
