[tool.poetry]
name = "django-contacts-assistant-project"
version = "0.1.0"
description = ""
authors = ["basilegupov <basilegupov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "22.0.0"
asgiref = "3.8.1"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
cloudinary = "1.40.0"
django = "5.0.6"
django-cloudinary-storage = "0.3.0"
idna = "3.7"
packaging = "24.1"
pillow = "10.3.0"
psycopg2 = "2.9.9"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.1"
requests = "2.32.3"
six = "1.16.0"
soupsieve = "2.5"
sqlparse = "0.5.0"
tzdata = "2024.1"
urllib3 = "2.2.2"
dj-database-url = "^2.2.0"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
